Update Gradle to 7.4, remove jcenter, remove maven, remove bintray-release - make project build

--- a/retrofit-converter/build.gradle
+++ b/retrofit-converter/build.gradle
@@ -1,10 +1,7 @@
 plugins {
     id 'java'
     id 'idea'
-    id 'maven'
 }
-
-apply plugin: 'com.novoda.bintray-release'
 
 sourceCompatibility = '1.7'
 targetCompatibility = '1.7'
@@ -22,12 +19,12 @@ dependencies {
     compileOnly project(':core')
     compileOnly 'com.squareup.moshi:moshi:1.4.0'
     compileOnly 'com.squareup.retrofit2:retrofit:2.4.0'
-    testCompile project(':core')
-    testCompile project(':core').sourceSets.test.output
-    testCompile 'com.squareup.moshi:moshi:1.4.0'
-    testCompile 'com.squareup.retrofit2:retrofit:2.4.0'
-    testCompile "org.mock-server:mockserver-netty:5.3.0"
-    testCompile 'junit:junit:4.12'
+    testImplementation project(':core')
+    testImplementation project(':core').sourceSets.test.output
+    testImplementation 'com.squareup.moshi:moshi:1.4.0'
+    testImplementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    testImplementation "org.mock-server:mockserver-netty:5.3.0"
+    testImplementation 'junit:junit:4.12'
 }
 
 test {
@@ -49,12 +46,4 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 artifacts {
     archives sourcesJar
     archives javadocJar
-}
-
-publish {
-    groupId = 'moe.banana'
-    artifactId = 'moshi-jsonapi-retrofit-converter'
-    publishVersion = describeVersion()
-    desc = 'Retrofit converter extension for moshi-jsonapi library.'
-    website = 'https://github.com/kamikat/moshi-jsonapi'
 }
