--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,6 @@
 buildscript {
     repositories {
-        jcenter()
-
-    }
-    dependencies {
-        classpath 'com.novoda:bintray-release:0.3.5'
+        mavenCentral()
     }
 }
 
@@ -19,6 +15,6 @@ subprojects {
     }
 
     repositories {
-        jcenter()
+        mavenCentral()
     }
 }
