--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,12 +1,9 @@
 plugins {
     id 'java'
     id 'idea'
-    id 'maven'
     id 'jacoco'
     id 'com.github.kt3k.coveralls' version '2.6.3'
 }
-
-apply plugin: 'com.novoda.bintray-release'
 
 sourceCompatibility = '1.7'
 targetCompatibility = '1.7'
@@ -22,8 +19,8 @@ sourceSets {
 
 dependencies {
     compileOnly 'com.squareup.moshi:moshi:1.4.0'
-    testCompile 'com.squareup.moshi:moshi:1.4.0'
-    testCompile 'junit:junit:4.12'
+    testImplementation 'com.squareup.moshi:moshi:1.4.0'
+    testImplementation 'junit:junit:4.12'
 }
 
 test {
@@ -52,12 +49,4 @@ jacocoTestReport {
         xml.enabled = true // coveralls plugin depends on xml format report
         html.enabled = true
     }
-}
-
-publish {
-    groupId = 'moe.banana'
-    artifactId = 'moshi-jsonapi'
-    publishVersion = describeVersion()
-    desc = 'Implement JSON API v1.0 Specification in Moshi.'
-    website = 'https://github.com/kamikat/moshi-jsonapi'
 }
