--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
 }
 
 subprojects {
+    apply plugin: "maven-publish"
+
     ext.describeVersion = { ->
         def stdout = new ByteArrayOutputStream()
         exec {
@@ -16,5 +18,18 @@ subprojects {
 
     repositories {
         mavenCentral()
+    }
+
+    publishing {
+        repositories {
+            maven {
+                name = "GitHubPackages"
+                url = "https://maven.pkg.github.com/codequest-eu/moshi-jsonapi"
+                credentials {
+                    username = System.getenv("GITHUB_ACTOR")
+                    password = System.getenv("GITHUB_TOKEN")
+                }
+            }
+        }
     }
 }
