--- a/build.gradle
+++ b/build.gradle
@@ -20,14 +20,25 @@ subprojects {
         mavenCentral()
     }
 
-    publishing {
-        repositories {
-            maven {
-                name = "GitHubPackages"
-                url = "https://maven.pkg.github.com/codequest-eu/moshi-jsonapi"
-                credentials {
-                    username = System.getenv("GITHUB_ACTOR")
-                    password = System.getenv("GITHUB_TOKEN")
+    project.afterEvaluate {
+        publishing {
+            repositories {
+                maven {
+                    name = "GitHubPackages"
+                    url = "https://maven.pkg.github.com/codequest-eu/moshi-jsonapi"
+                    credentials {
+                        username = System.getenv("GITHUB_ACTOR")
+                        password = System.getenv("GITHUB_TOKEN")
+                    }
+                }
+            }
+            publications {
+                gpr(MavenPublication) {
+                    from(components.java)
+
+                    groupId = "moshi-jsonapi"
+                    artifactId = project.name
+                    version = "3.5.1"
                 }
             }
         }
