--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 }
 
 subprojects {
+    apply from: "$rootDir/config.gradle"
     apply plugin: "maven-publish"
 
     ext.describeVersion = { ->
@@ -20,12 +21,12 @@ subprojects {
         mavenCentral()
     }
 
-    project.afterEvaluate {
+    afterEvaluate {
         publishing {
             repositories {
                 maven {
-                    name = "GitHubPackages"
-                    url = "https://maven.pkg.github.com/codequest-eu/moshi-jsonapi"
+                    name = publishConfig.gitHubPackagesName
+                    url = publishConfig.gitHubPackagesUrl
                     credentials {
                         username = System.getenv("GITHUB_ACTOR")
                         password = System.getenv("GITHUB_TOKEN")
@@ -34,11 +35,11 @@ subprojects {
             }
             publications {
                 gpr(MavenPublication) {
-                    from(components.java)
+                    from components.java
 
-                    groupId = "moshi-jsonapi"
+                    groupId = publishConfig.groupId
                     artifactId = project.name
-                    version = "3.5.1"
+                    version = publishConfig.version
                 }
             }
         }
